--- a/src/components/PokeDexWrapper/styles.scss
+++ b/src/components/PokeDexWrapper/styles.scss
@@ -14,6 +14,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: auto;
         grid-gap: 1rem; 
-        margin-top: 2rem; 
+        margin-top: 2rem;  
+        overflow: hidden;
     } 
 }
