--- a/src/components/PokemonCard/styles.scss
+++ b/src/components/PokemonCard/styles.scss
@@ -1,40 +1,31 @@
 .pokemonCard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  background-color: #fff; 
-  transition:height 0.5s; 
-  -webkit-transition: width 0.5s; 
-text-align: center; 
+  background-color: #fff;
+  text-align: center;
+  overflow: hidden;
   &__expand {
-        width: 500px; 
+    width: 500px;
   }
   &:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    cursor: pointer; 
+    cursor: pointer;
   }
   &__heading {
-    .imagePlaceholder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__imagePlaceholder {
       padding: 0;
       width: 100%;
       position: relative;
       max-height: inherit;
       object-fit: cover;
       img {
-        height: 250px;
-        width: 100%; 
-      }
-      h3 {
-        font-size: 1.5rem;
-        color: #fff;
-        text-transform: capitalize;
-        font-weight: 700;
-        position: absolute;
-        top: 0;
-        z-index: 100;
-        margin: 1rem;
+        height: 110px;
+        width: 100%;
       }
       &::after {
         content: "";
@@ -47,10 +38,24 @@ text-align: center;
         height: 100%;
       }
     }
-  } 
+    &__title {
+      font-size: 1.5rem;
+      color: #000000;
+      text-transform: capitalize;
+      font-weight: 700;
+      margin: 1rem;
+      padding-bottom: 0.5rem;
+      text-align: initial;
+      width: 88%;
+      float: left;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+  }
   &__content {
-    padding: 2px 16px; 
+    padding: 2px 16px;
     list-style: none;
-  } 
-
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
 }
