--- a/src/index.css
+++ b/src/index.css
@@ -4,33 +4,10 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+  background-color: #000 !important; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-ul {
-  list-style: none;
-} 
-.App > input {
-  margin: 1rem;
-}
-.list-wrapper {
-  display: flex; 
-  flex-direction: column; 
-  padding: 0;
-} 
-.list-wrapper > .list-item {
-  margin: 1rem; 
-  padding: 1.5rem;
-  background-color: whitesmoke;
-} 
-.list-wrapper > .list-item > span {
-  float: right; 
-} 
-.list-wrapper > .list-item > span:hover {
-   cursor: pointer;
+body > .popover {
+  width: 300px;
 }
